--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 Django==4.2.3
 django-taggit==4.0.0
 Markdown==3.4.4
+psycopg2-binary==2.9.7
 python-dotenv==1.0.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
